--- a/style.css
+++ b/style.css
@@ -78,15 +78,30 @@ div#overlay {
 #s1 {
 	background-image: url("img/bass.jpg");
 }
+
 #s2 {
 	background-image: url("img/soundcheck.jpg");
 }
+
 #s3 {
 	background-image: url("img/bari.jpg");
 	background-position: center bottom;
 }
+
 #s4 {
 	background-image: url("img/forest.jpg");
+}
+
+.uparrow {
+	text-align: center;
+	width: 100%;
+	top: 30px;
+	position: absolute;
+	color: white;
+	font-size: 40px;
+	text-shadow:0 0 50px gold,0 0 150px gold;
+	-moz-animation: glowpulse 2s infinite;
+	-webkit-animation: glowpulse 2s infinite;
 }
 
 .downarrow {
@@ -97,8 +112,8 @@ div#overlay {
 	color: white;
 	font-size: 40px;
 	text-shadow:0 0 50px gold,0 0 150px gold;
-	-moz-animation: glowpulse 2s infinite;
-	-webkit-animation: glowpulse 2s infinite;
+	-moz-animation: glowpulse 1500ms infinite;
+	-webkit-animation: glowpulse 1500ms infinite;
 }
 
 @-moz-keyframes glowpulse
@@ -113,4 +128,9 @@ div#overlay {
 	50% {text-shadow: 0px 0px 25px gold;}
 	100% {text-shadow: 0px 0px 10px #666666; }
 }
-
+.cthulhutext {
+	display:block;
+	color: black;
+	font-size: 20px;
+	position: absolute;
+}
