--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
 	width: 100%;
 	height: 100%;
 	font: normal normal 13px Helvetica, FreeSans, Arial, Tahoma, sans-serif;
-/*	font-family: 'Open Sans',sans-serif;*/
 }
 
 h1 {
@@ -35,9 +34,8 @@ a:hover {
 .info {
 	margin: 0 auto 0 auto;
 	padding: 20px;
-	background: #fcf3f3;
+	background: #f3f3f3;
 	width: 400px;
-	/*top: 50%;*/
 	opacity: .8;
 	transition: opacity 400ms ease-in-out;
 }
@@ -118,15 +116,15 @@ div#overlay {
 
 @-moz-keyframes glowpulse
 {
-	0% {text-shadow: 0px 0px 10px #666666; }
+	0% {text-shadow: 0px 0px 10px #444444; }
 	50% {text-shadow: 0px 0px 25px gold;}
-	100% {text-shadow: 0px 0px 10px #666666; }
+	100% {text-shadow: 0px 0px 10px #444444; }
 }
 @-webkit-keyframes glowpulse
 {
-	0% {text-shadow: 0px 0px 10px #666666; }
+	0% {text-shadow: 0px 0px 10px #444444; }
 	50% {text-shadow: 0px 0px 25px gold;}
-	100% {text-shadow: 0px 0px 10px #666666; }
+	100% {text-shadow: 0px 0px 10px #444444; }
 }
 .cthulhutext {
 	display:block;
